CHANGES IN VERSION 1.9.1
------------------------
 o bug fixed in getNearestFeatureIndicesAndDistances <2016-05-11, Wed>
   + correct metadata in dummy NA feature
   
CHANGES IN VERSION 1.8.0
------------------------
 o BioC 3.3 released <2016-05-05, Thu>
 
CHANGES IN VERSION 1.7.15
------------------------
 o update GEO data <2016-03-21, Mon>
 
CHANGES IN VERSION 1.7.14
------------------------
 o list_to_dataframe works with data frames that have different colnames <2016-03-10, Thu>

CHANGES IN VERSION 1.7.13
------------------------
 o support annotate peaks with custom regions via passing TxDb=user_defined_GRanges to annotatePeak <2016-03-06, Sun>

CHANGES IN VERSION 1.7.12
------------------------
 o fixed R check <2016-03-05, Sat>
 o implement list_to_dataframe that mimic ldply and remove ldply dependency <2016-03-05, Sat>

CHANGES IN VERSION 1.7.11
------------------------
 o fixed issue in testing list in covplot introduced in 1.7.9 <2016-03-02, Wed>

CHANGES IN VERSION 1.7.10
------------------------
 o determined gene ID type if TxDb doesn't contain corresponding metadata <2016-03-01, Tue>
   + fixed https://github.com/GuangchuangYu/ChIPseeker/issues/28
 
CHANGES IN VERSION 1.7.9
------------------------
 o covplot support GRangesList <2016-02-24, Wed>
 o update ReactomePA citation info <2016-02-17, Wed>

CHANGES IN VERSION 1.7.8
------------------------
 o fixed BUG of Peaks upstream first or downstream last gene not annotated <2016-01-20, Wed>
   + contributed by Michael Kluge
   + see https://github.com/GuangchuangYu/ChIPseeker/pull/24
 
CHANGES IN VERSION 1.7.7
------------------------
 o bug fixed in newly introduced parameter 'overlap'. solve NA issue. <2016-01-13, Wed>
 
CHANGES IN VERSION 1.7.6
------------------------
 o introduce 'overlap' parameter in annotatePeak, by default overlap="TSS" and only overlap with TSS will be reported as the nearest gene.